# reaytracer-final-p

./: AABB.h  CMakeLists.txt  Camera.h  README.md  Ray.h  Scene.h  Shape.h  Sphere.h  Texture.h  aarect.h  box.h  color.h  main  main.cpp  material.h  perlin.h  rtw_stb_image.h  triangle.h  utils.h  vec3.h
shapes/: AABB.h  Shape.h  Sphere.h  aarect.h  box.h  triangle.h
